Se corrigen epqueños bugs de visualización respecto a los z-index

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -18,7 +18,7 @@
             position: absolute;
             top: 1.4rem;
             left: 1.6rem;
-            z-index: 800;
+            z-index: 500;
             width: 4rem;
             height: 4rem;
             border-radius: 4rem;
@@ -26,18 +26,20 @@
         }
         .infoBtn{
             @include returnBtn;
-            background-image: url("../assets/blackburguermenu.png");
             position: absolute;
             top: 1rem;
             left: 1.2rem;
-            z-index: 800;
+            z-index: 500;
+            
             width: 5rem;
             height: 5rem;
+
+            border: 2px solid rgba(0,0,0,0.2);
             border-radius: 4rem;
+            background-image: url("../assets/blackburguermenu.png");
             background-color: $color-alternative;
             background-size: 3rem 3rem;
             transform: none;
-            border: 2px solid rgba(0,0,0,0.2);
             background-clip: padding-box;
             box-shadow: none;
         }
@@ -145,7 +147,7 @@
 .navigation{
     display: flex;
     align-items: center;
-    z-index: 5001;
+    z-index: 501;
     position: fixed;
     top: 50%;
     
@@ -632,5 +634,10 @@
         padding-top: 5rem;
         @include grid-column(1, 2);
         @include grid-row(1, 3);
+    }
+    .lateralMenuContainer{
+        .burguerMenu{
+            width: 35%;
+        }
     }
 }
